--- a/Strutural.html
+++ b/Strutural.html
@@ -5,7 +5,7 @@
 <head>
     <link href="dist/css/bootstrap.css", rel="stylesheet">
     <link rel="stylesheet" href = "dist/css/bootstrap.css">
-    <link rel="stylesheet" href = "drippy_style.css">
+    <link rel="stylesheet" href = "Structural_styel.css">
 
 </head>
 
@@ -16,7 +16,7 @@
             <li><a href="#">About us</a></li>
         </ul>
         <ul class="pull-right">
-            <li><a href="#">Login in</a></li>
+            <li><a href="#">Login</a></li>
         </ul>
     </div>
 </div>
