--- a/Strutural.html
+++ b/Strutural.html
@@ -12,7 +12,7 @@
 <body>
 <div class="nav">
     <div class="container">
-        <ul class="pull-left">
+        <ul class="pull-left" id="pull">
             <li><a href="#">About us</a></li>
         </ul>
         <ul class="pull-right">
@@ -29,20 +29,16 @@
 
 <div class="learn-more">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h3><a href="#">Beams</a></h3>
-                <p>Rapid Calculation for any user-defined problem. </p>
-            </div>
-            <div class="col-md-4">
+                <h3 id="beam"><a href="#">Beams</a>
+                  <ul id="hidden1"> Steel</ul>
+                  <ul class = "hidden"> Concrete</ul>
+                </h3>
                 <h3><a href="#">Columns</a></h3>
-                <p>Provides general sample calculations on MathCad sheets</p>
-            </div>
-            <div class="col-md-4">
-                <h3><a href="#">and Many More</a></h3>
-            </div>
-        </div>
+                <h3><a href="#">Slabs</a></h3>
     </div>
 </div>
+<script src="Structural.js">
+
+</script>
 </body>
 </html>
