Hiding/unhiding Steel and Concrete Components

--- a/Strutural.html
+++ b/Strutural.html
@@ -30,7 +30,7 @@
 <div class="learn-more">
     <div class="container">
                 <h3 id="beam"><a href="#">Beams</a>
-                  <ul id="hidden1"> Steel</ul>
+                  <ul class = "hidden"> Steel</ul>
                   <ul class = "hidden"> Concrete</ul>
                 </h3>
                 <h3><a href="#">Columns</a></h3>
